--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,15 @@
 
   <properties>
     <project.build.sourceEncoding> UTF-8 </project.build.sourceEncoding>
-    <maven.compiler.source> 1.8 </maven.compiler.source>
-    <maven.compiler.target> 1.8 </maven.compiler.target>
-    <commerce-tools.version> 1.51.0 </commerce-tools.version>
-    <fasterxml.version> 2.9.9 </fasterxml.version>
-    <apache-httpclient.version>4.5.5</apache-httpclient.version>
-    <apache-commons-io.version>1.3.2</apache-commons-io.version>
-    <javax-ws-rs-api.version>2.1</javax-ws-rs-api.version>
-    <lombok.version> 1.16.20 </lombok.version>
-    <junit.version> 4.11 </junit.version>
+    <maven.compiler.source> 11 </maven.compiler.source>
+    <maven.compiler.target> 11 </maven.compiler.target>
+    <commerce-tools.version> 1.52.0 </commerce-tools.version>
+    <fasterxml.version> 2.13.1 </fasterxml.version>
+    <apache-httpclient.version> 4.5.13 </apache-httpclient.version>
+    <apache-commons-io.version> 2.11.0 </apache-commons-io.version>
+    <javax-ws-rs-api.version> 2.1.1 </javax-ws-rs-api.version>
+    <lombok.version> 1.18.22 </lombok.version>
+    <junit.version> 4.13.2 </junit.version>
   </properties>
 
   <dependencies>
@@ -74,7 +74,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${apache-commons-io.version}</version>
     </dependency>
@@ -88,7 +88,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
